parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    THEN
    VD

Grammar

Rule 0     S' -> program
Rule 1     cte_f -> CTE_I DOT CTE_I
Rule 2     program -> PROGRAM ID punto_program COLON main
Rule 3     program -> PROGRAM ID punto_program COLON variables main
Rule 4     program -> PROGRAM ID punto_program COLON variables funciones main
Rule 5     program -> PROGRAM ID punto_program COLON funciones main
Rule 6     punto_program -> <empty>
Rule 7     main -> MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator
Rule 8     punto_generator -> <empty>
Rule 9     punto_goto_main -> <empty>
Rule 10    main_aux -> estatutos_main_multiple
Rule 11    main_aux -> empty
Rule 12    variables -> VAR punto_variables_1 SEMICOLON
Rule 13    variables -> VAR punto_variables_1 variables_aux SEMICOLON
Rule 14    punto_variables_1 -> <empty>
Rule 15    variables_aux -> tipo COLON declaracion_inicial
Rule 16    variables_aux -> tipo COLON declaracion_inicial MORE variables_aux
Rule 17    tipo -> INT
Rule 18    tipo -> FLOAT
Rule 19    tipo -> CHAR
Rule 20    declaracion_inicial -> dec_varaux punto_dec_var_1 COMMA declaracion_inicial
Rule 21    declaracion_inicial -> dec_varaux punto_dec_var_1
Rule 22    punto_dec_var_1 -> <empty>
Rule 23    dec_varaux -> ID
Rule 24    dec_varaux -> dec_var_dimension
Rule 25    dec_var_dimension -> ID LEFT_BR punto_is_array CTE_I punto_size RIGHT_BR
Rule 26    dec_var_dimension -> ID LEFT_BR punto_is_array CTE_I punto_size RIGHT_BR LEFT_BR CTE_I punto_size RIGHT_BR
Rule 27    punto_is_array -> <empty>
Rule 28    punto_size -> <empty>
Rule 29    punto_dec_varaux_1 -> <empty>
Rule 30    dec_var -> ID COMMA dec_var
Rule 31    dec_var -> ID
Rule 32    dec_var_llamada -> m_exp punto_verify_dec_param COMMA punto_mas_k dec_var_llamada
Rule 33    dec_var_llamada -> m_exp punto_verify_dec_param
Rule 34    punto_mas_k -> <empty>
Rule 35    punto_verify_dec_param -> <empty>
Rule 36    funciones -> funciones_aux
Rule 37    funciones -> funciones_aux funciones
Rule 38    funciones_aux -> tipo FUNC ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
Rule 39    funciones_aux -> VOID FUNC ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func
Rule 40    punto_return_value -> <empty>
Rule 41    not_variables -> variables count_vars
Rule 42    not_variables -> empty
Rule 43    not_params -> parametros count_params
Rule 44    not_params -> empty
Rule 45    punto_end_function_return -> <empty>
Rule 46    punto_id_func -> <empty>
Rule 47    parametros -> dec_var_param COMMA parametros
Rule 48    parametros -> dec_var_param
Rule 49    dec_var_param -> tipo ID punto_push_param
Rule 50    punto_push_param -> <empty>
Rule 51    count_params -> <empty>
Rule 52    count_vars -> <empty>
Rule 53    end_func -> <empty>
Rule 54    exp_or -> t_exp punto_pop_or t_exp_or_aux
Rule 55    exp_or -> t_exp punto_pop_or
Rule 56    punto_pop_or -> <empty>
Rule 57    t_exp_or_aux -> OR punto_push_or exp_or
Rule 58    punto_push_or -> <empty>
Rule 59    t_exp -> g_exp pop_and t_exp_aux
Rule 60    t_exp -> g_exp pop_and
Rule 61    pop_and -> <empty>
Rule 62    t_exp_aux -> AND punto_push_and t_exp
Rule 63    punto_push_and -> <empty>
Rule 64    g_exp -> m_exp
Rule 65    g_exp -> m_exp relacionales punto_relacionales m_exp punto_pop_relacional
Rule 66    punto_relacionales -> <empty>
Rule 67    punto_pop_relacional -> <empty>
Rule 68    m_exp -> termino punto_mexp_pop
Rule 69    m_exp -> termino punto_mexp_pop m_exp_aux
Rule 70    punto_mexp_pop -> <empty>
Rule 71    m_exp_aux -> PLUS punto_m_exp_push m_exp
Rule 72    m_exp_aux -> MINUS punto_m_exp_push m_exp
Rule 73    punto_m_exp_push -> <empty>
Rule 74    termino -> factor punto_termino_pop
Rule 75    termino -> factor punto_termino_pop termino_aux
Rule 76    punto_termino_pop -> <empty>
Rule 77    termino_aux -> MULTIPLY punto_termino_aux termino
Rule 78    termino_aux -> DIVIDE punto_termino_aux termino
Rule 79    punto_termino_aux -> <empty>
Rule 80    factor -> cte
Rule 81    factor -> LEFT_PAR punto_fondo_falso exp_or RIGHT_PAR punto_fin_fondo_falso
Rule 82    punto_fondo_falso -> <empty>
Rule 83    punto_fin_fondo_falso -> <empty>
Rule 84    relacionales -> LESS_THAN
Rule 85    relacionales -> GREATER_THAN
Rule 86    relacionales -> DIFFERENT
Rule 87    relacionales -> EQUAL
Rule 88    relacionales -> GREATER_EQUAL
Rule 89    relacionales -> LESS_EQUAL
Rule 90    estatutos -> estatutos_main_aux
Rule 91    estatutos -> retorno SEMICOLON
Rule 92    estatutos_main -> asignacion SEMICOLON
Rule 93    estatutos_main -> llamada SEMICOLON
Rule 94    estatutos_main -> lectura SEMICOLON
Rule 95    estatutos_main -> escritura SEMICOLON
Rule 96    estatutos_main -> decision SEMICOLON
Rule 97    estatutos_main -> repeticion SEMICOLON
Rule 98    estatutos_main_multiple -> estatutos_main estatutos_main_multiple
Rule 99    estatutos_main_multiple -> estatutos_main
Rule 100   estatutos_main_aux -> estatutos_main estatutos
Rule 101   estatutos_main_aux -> estatutos_main
Rule 102   asignacion -> vars EQUALS punto_igual m_exp punto_asignacion
Rule 103   vars -> ID punto_asignacion_var
Rule 104   vars -> ID punto_asignacion_var punto_get_size LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_verify_arr
Rule 105   vars -> ID punto_asignacion_var punto_get_size LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_dimension_2 LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_verify_matriz
Rule 106   punto_verify_matriz -> <empty>
Rule 107   punto_dimension_2 -> <empty>
Rule 108   punto_get_size -> <empty>
Rule 109   punto_access_arr -> <empty>
Rule 110   punto_verify_arr -> <empty>
Rule 111   punto_asignacion_var -> <empty>
Rule 112   punto_igual -> <empty>
Rule 113   punto_asignacion -> <empty>
Rule 114   llamada -> ID punto_verify_id LEFT_PAR punto_era RIGHT_PAR punto_end_llamada
Rule 115   llamada -> ID punto_verify_id LEFT_PAR punto_era dec_var_llamada RIGHT_PAR punto_verify_total_params punto_end_llamada
Rule 116   punto_verify_id -> <empty>
Rule 117   punto_verify_total_params -> <empty>
Rule 118   punto_end_llamada -> <empty>
Rule 119   punto_era -> <empty>
Rule 120   retorno -> RETURN LEFT_PAR m_exp RIGHT_PAR punto_return
Rule 121   punto_return -> <empty>
Rule 122   punto_read_stack -> <empty>
Rule 123   lectura -> READ LEFT_PAR lectura_var RIGHT_PAR
Rule 124   lectura_var -> punto_read_stack ID punto_push_dec_var punto_add_read_operand COMMA lectura_var
Rule 125   lectura_var -> punto_read_stack ID punto_push_dec_var punto_add_read_operand
Rule 126   punto_push_dec_var -> <empty>
Rule 127   punto_add_read_operand -> <empty>
Rule 128   escritura -> WRITE LEFT_PAR escritura_aux RIGHT_PAR
Rule 129   escritura_aux -> punto_write_stack STR punto_escritura_push punto_add_write_operand
Rule 130   escritura_aux -> punto_write_stack m_exp punto_escritura_push punto_add_write_operand
Rule 131   escritura_aux -> punto_write_stack STR punto_escritura_push punto_add_write_operand COMMA escritura_aux
Rule 132   escritura_aux -> punto_write_stack m_exp punto_escritura_push punto_add_write_operand COMMA escritura_aux
Rule 133   punto_escritura_push -> <empty>
Rule 134   punto_write_stack -> <empty>
Rule 135   punto_add_write_operand -> <empty>
Rule 136   decision -> IF LEFT_PAR exp_or RIGHT_PAR punto_if_exp LEFT_CURL estatutos RIGHT_CURL punto_end_if
Rule 137   decision -> IF LEFT_PAR exp_or RIGHT_PAR punto_if_exp LEFT_CURL estatutos RIGHT_CURL ELSE punto_else LEFT_CURL estatutos RIGHT_CURL punto_end_if
Rule 138   punto_if_exp -> <empty>
Rule 139   punto_else -> <empty>
Rule 140   punto_end_if -> <empty>
Rule 141   repeticion -> condicional
Rule 142   repeticion -> no_condicional
Rule 143   no_condicional -> FOR LEFT_PAR ID punto_for EQUALS m_exp punto_exp_for_inf TO m_exp punto_exp_for_sup RIGHT_PAR LEFT_CURL estatutos RIGHT_CURL punto_end_for
Rule 144   punto_for -> <empty>
Rule 145   punto_exp_for_inf -> <empty>
Rule 146   punto_exp_for_sup -> <empty>
Rule 147   punto_end_for -> <empty>
Rule 148   condicional -> WHILE punto_while LEFT_PAR exp_or RIGHT_PAR punto_validar_exp LEFT_CURL estatutos RIGHT_CURL punto_end_while
Rule 149   punto_while -> <empty>
Rule 150   punto_validar_exp -> <empty>
Rule 151   punto_end_while -> <empty>
Rule 152   cte -> ID factor_push_operand
Rule 153   cte -> CTE_I factor_int_push
Rule 154   cte -> cte_f factor_float_push
Rule 155   cte -> CTE_CHAR factor_char_push
Rule 156   factor_push_operand -> <empty>
Rule 157   factor_float_push -> <empty>
Rule 158   factor_int_push -> <empty>
Rule 159   factor_char_push -> <empty>
Rule 160   empty -> <empty>

Terminals, with rules where they appear

AND                  : 62
CHAR                 : 19
COLON                : 2 3 4 5 15 16
COMMA                : 20 30 32 47 124 131 132
CTE_CHAR             : 155
CTE_I                : 1 1 25 26 26 153
DIFFERENT            : 86
DIVIDE               : 78
DO                   : 
DOT                  : 1
ELSE                 : 137
EQUAL                : 87
EQUALS               : 102 143
FLOAT                : 18
FOR                  : 143
FUNC                 : 38 39
GREATER_EQUAL        : 88
GREATER_THAN         : 85
ID                   : 2 3 4 5 23 25 26 30 31 38 39 49 103 104 105 114 115 124 125 143 152
IF                   : 136 137
INT                  : 17
LEFT_BR              : 25 26 26 104 105 105
LEFT_CURL            : 7 38 39 136 137 137 143 148
LEFT_PAR             : 7 38 39 81 114 115 120 123 128 136 137 143 148
LESS_EQUAL           : 89
LESS_THAN            : 84
MAIN                 : 7
MINUS                : 72
MORE                 : 16
MULTIPLY             : 77
OR                   : 57
PLUS                 : 71
PROGRAM              : 2 3 4 5
READ                 : 123
RETURN               : 120
RIGHT_BR             : 25 26 26 104 105 105
RIGHT_CURL           : 7 38 39 136 137 137 143 148
RIGHT_PAR            : 7 38 39 81 114 115 120 123 128 136 137 143 148
SEMICOLON            : 12 13 91 92 93 94 95 96 97
STR                  : 129 131
THEN                 : 
TO                   : 143
VAR                  : 12 13
VD                   : 
VOID                 : 39
WHILE                : 148
WRITE                : 128
error                : 

Nonterminals, with rules where they appear

asignacion           : 92
condicional          : 141
count_params         : 43
count_vars           : 39 41
cte                  : 80
cte_f                : 154
dec_var              : 30
dec_var_dimension    : 24
dec_var_llamada      : 32 115
dec_var_param        : 47 48
dec_varaux           : 20 21
decision             : 96
declaracion_inicial  : 15 16 20
empty                : 11 42 44
end_func             : 39
escritura            : 95
escritura_aux        : 128 131 132
estatutos            : 38 39 100 136 137 137 143 148
estatutos_main       : 98 99 100 101
estatutos_main_aux   : 90
estatutos_main_multiple : 10 98
exp_or               : 57 81 136 137 148
factor               : 74 75
factor_char_push     : 155
factor_float_push    : 154
factor_int_push      : 153
factor_push_operand  : 152
funciones            : 4 5 37
funciones_aux        : 36 37
g_exp                : 59 60
lectura              : 94
lectura_var          : 123 124
llamada              : 93
m_exp                : 32 33 64 65 65 71 72 102 104 105 105 120 130 132 143 143
m_exp_aux            : 69
main                 : 2 3 4 5
main_aux             : 7
no_condicional       : 142
not_params           : 38 39
not_variables        : 38 39
parametros           : 43 47
pop_and              : 59 60
program              : 0
punto_access_arr     : 104 105 105
punto_add_read_operand : 124 125
punto_add_write_operand : 129 130 131 132
punto_asignacion     : 102
punto_asignacion_var : 103 104 105
punto_dec_var_1      : 20 21
punto_dec_varaux_1   : 
punto_dimension_2    : 105
punto_else           : 137
punto_end_for        : 143
punto_end_function_return : 38
punto_end_if         : 136 137
punto_end_llamada    : 114 115
punto_end_while      : 148
punto_era            : 114 115
punto_escritura_push : 129 130 131 132
punto_exp_for_inf    : 143
punto_exp_for_sup    : 143
punto_fin_fondo_falso : 81
punto_fondo_falso    : 81 104 105 105
punto_for            : 143
punto_generator      : 7
punto_get_size       : 104 105
punto_goto_main      : 7
punto_id_func        : 38 39
punto_if_exp         : 136 137
punto_igual          : 102
punto_is_array       : 25 26
punto_m_exp_push     : 71 72
punto_mas_k          : 32
punto_mexp_pop       : 68 69
punto_pop_or         : 54 55
punto_pop_relacional : 65
punto_program        : 2 3 4 5
punto_push_and       : 62
punto_push_dec_var   : 124 125
punto_push_or        : 57
punto_push_param     : 49
punto_read_stack     : 124 125
punto_relacionales   : 65
punto_return         : 120
punto_return_value   : 38
punto_size           : 25 26 26
punto_termino_aux    : 77 78
punto_termino_pop    : 74 75
punto_validar_exp    : 148
punto_variables_1    : 12 13
punto_verify_arr     : 104
punto_verify_dec_param : 32 33
punto_verify_id      : 114 115
punto_verify_matriz  : 105
punto_verify_total_params : 115
punto_while          : 148
punto_write_stack    : 129 130 131 132
relacionales         : 65
repeticion           : 97
retorno              : 91
t_exp                : 54 55 62
t_exp_aux            : 59
t_exp_or_aux         : 54
termino              : 68 69 77 78
termino_aux          : 75
tipo                 : 15 16 38 49
variables            : 3 4 41
variables_aux        : 13 16
vars                 : 102

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . PROGRAM ID punto_program COLON main
    (3) program -> . PROGRAM ID punto_program COLON variables main
    (4) program -> . PROGRAM ID punto_program COLON variables funciones main
    (5) program -> . PROGRAM ID punto_program COLON funciones main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (2) program -> PROGRAM . ID punto_program COLON main
    (3) program -> PROGRAM . ID punto_program COLON variables main
    (4) program -> PROGRAM . ID punto_program COLON variables funciones main
    (5) program -> PROGRAM . ID punto_program COLON funciones main

    ID              shift and go to state 3


state 3

    (2) program -> PROGRAM ID . punto_program COLON main
    (3) program -> PROGRAM ID . punto_program COLON variables main
    (4) program -> PROGRAM ID . punto_program COLON variables funciones main
    (5) program -> PROGRAM ID . punto_program COLON funciones main
    (6) punto_program -> .

    COLON           reduce using rule 6 (punto_program -> .)

    punto_program                  shift and go to state 4

state 4

    (2) program -> PROGRAM ID punto_program . COLON main
    (3) program -> PROGRAM ID punto_program . COLON variables main
    (4) program -> PROGRAM ID punto_program . COLON variables funciones main
    (5) program -> PROGRAM ID punto_program . COLON funciones main

    COLON           shift and go to state 5


state 5

    (2) program -> PROGRAM ID punto_program COLON . main
    (3) program -> PROGRAM ID punto_program COLON . variables main
    (4) program -> PROGRAM ID punto_program COLON . variables funciones main
    (5) program -> PROGRAM ID punto_program COLON . funciones main
    (7) main -> . MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator
    (12) variables -> . VAR punto_variables_1 SEMICOLON
    (13) variables -> . VAR punto_variables_1 variables_aux SEMICOLON
    (36) funciones -> . funciones_aux
    (37) funciones -> . funciones_aux funciones
    (38) funciones_aux -> . tipo FUNC ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
    (39) funciones_aux -> . VOID FUNC ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . CHAR

    MAIN            shift and go to state 9
    VAR             shift and go to state 10
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    main                           shift and go to state 6
    variables                      shift and go to state 7
    funciones                      shift and go to state 8
    funciones_aux                  shift and go to state 11
    tipo                           shift and go to state 12

state 6

    (2) program -> PROGRAM ID punto_program COLON main .

    $end            reduce using rule 2 (program -> PROGRAM ID punto_program COLON main .)


state 7

    (3) program -> PROGRAM ID punto_program COLON variables . main
    (4) program -> PROGRAM ID punto_program COLON variables . funciones main
    (7) main -> . MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator
    (36) funciones -> . funciones_aux
    (37) funciones -> . funciones_aux funciones
    (38) funciones_aux -> . tipo FUNC ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
    (39) funciones_aux -> . VOID FUNC ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . CHAR

    MAIN            shift and go to state 9
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    main                           shift and go to state 17
    funciones                      shift and go to state 18
    funciones_aux                  shift and go to state 11
    tipo                           shift and go to state 12

state 8

    (5) program -> PROGRAM ID punto_program COLON funciones . main
    (7) main -> . MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator

    MAIN            shift and go to state 9

    main                           shift and go to state 19

state 9

    (7) main -> MAIN . LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator

    LEFT_PAR        shift and go to state 20


state 10

    (12) variables -> VAR . punto_variables_1 SEMICOLON
    (13) variables -> VAR . punto_variables_1 variables_aux SEMICOLON
    (14) punto_variables_1 -> .

    SEMICOLON       reduce using rule 14 (punto_variables_1 -> .)
    INT             reduce using rule 14 (punto_variables_1 -> .)
    FLOAT           reduce using rule 14 (punto_variables_1 -> .)
    CHAR            reduce using rule 14 (punto_variables_1 -> .)

    punto_variables_1              shift and go to state 21

state 11

    (36) funciones -> funciones_aux .
    (37) funciones -> funciones_aux . funciones
    (36) funciones -> . funciones_aux
    (37) funciones -> . funciones_aux funciones
    (38) funciones_aux -> . tipo FUNC ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
    (39) funciones_aux -> . VOID FUNC ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . CHAR

    MAIN            reduce using rule 36 (funciones -> funciones_aux .)
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    funciones_aux                  shift and go to state 11
    funciones                      shift and go to state 22
    tipo                           shift and go to state 12

state 12

    (38) funciones_aux -> tipo . FUNC ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return

    FUNC            shift and go to state 23


state 13

    (39) funciones_aux -> VOID . FUNC ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func

    FUNC            shift and go to state 24


state 14

    (17) tipo -> INT .

    FUNC            reduce using rule 17 (tipo -> INT .)
    COLON           reduce using rule 17 (tipo -> INT .)
    ID              reduce using rule 17 (tipo -> INT .)


state 15

    (18) tipo -> FLOAT .

    FUNC            reduce using rule 18 (tipo -> FLOAT .)
    COLON           reduce using rule 18 (tipo -> FLOAT .)
    ID              reduce using rule 18 (tipo -> FLOAT .)


state 16

    (19) tipo -> CHAR .

    FUNC            reduce using rule 19 (tipo -> CHAR .)
    COLON           reduce using rule 19 (tipo -> CHAR .)
    ID              reduce using rule 19 (tipo -> CHAR .)


state 17

    (3) program -> PROGRAM ID punto_program COLON variables main .

    $end            reduce using rule 3 (program -> PROGRAM ID punto_program COLON variables main .)


state 18

    (4) program -> PROGRAM ID punto_program COLON variables funciones . main
    (7) main -> . MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator

    MAIN            shift and go to state 9

    main                           shift and go to state 25

state 19

    (5) program -> PROGRAM ID punto_program COLON funciones main .

    $end            reduce using rule 5 (program -> PROGRAM ID punto_program COLON funciones main .)


state 20

    (7) main -> MAIN LEFT_PAR . RIGHT_PAR LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator

    RIGHT_PAR       shift and go to state 26


state 21

    (12) variables -> VAR punto_variables_1 . SEMICOLON
    (13) variables -> VAR punto_variables_1 . variables_aux SEMICOLON
    (15) variables_aux -> . tipo COLON declaracion_inicial
    (16) variables_aux -> . tipo COLON declaracion_inicial MORE variables_aux
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . CHAR

    SEMICOLON       shift and go to state 27
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    variables_aux                  shift and go to state 28
    tipo                           shift and go to state 29

state 22

    (37) funciones -> funciones_aux funciones .

    MAIN            reduce using rule 37 (funciones -> funciones_aux funciones .)


state 23

    (38) funciones_aux -> tipo FUNC . ID punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return

    ID              shift and go to state 30


state 24

    (39) funciones_aux -> VOID FUNC . ID punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func

    ID              shift and go to state 31


state 25

    (4) program -> PROGRAM ID punto_program COLON variables funciones main .

    $end            reduce using rule 4 (program -> PROGRAM ID punto_program COLON variables funciones main .)


state 26

    (7) main -> MAIN LEFT_PAR RIGHT_PAR . LEFT_CURL punto_goto_main main_aux RIGHT_CURL punto_generator

    LEFT_CURL       shift and go to state 32


state 27

    (12) variables -> VAR punto_variables_1 SEMICOLON .

    MAIN            reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    VOID            reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    INT             reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    FLOAT           reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    CHAR            reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    RETURN          reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    ID              reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    READ            reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    WRITE           reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    IF              reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    WHILE           reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)
    FOR             reduce using rule 12 (variables -> VAR punto_variables_1 SEMICOLON .)


state 28

    (13) variables -> VAR punto_variables_1 variables_aux . SEMICOLON

    SEMICOLON       shift and go to state 33


state 29

    (15) variables_aux -> tipo . COLON declaracion_inicial
    (16) variables_aux -> tipo . COLON declaracion_inicial MORE variables_aux

    COLON           shift and go to state 34


state 30

    (38) funciones_aux -> tipo FUNC ID . punto_id_func punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
    (46) punto_id_func -> .

    LEFT_PAR        reduce using rule 46 (punto_id_func -> .)

    punto_id_func                  shift and go to state 35

state 31

    (39) funciones_aux -> VOID FUNC ID . punto_id_func LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func
    (46) punto_id_func -> .

    LEFT_PAR        reduce using rule 46 (punto_id_func -> .)

    punto_id_func                  shift and go to state 36

state 32

    (7) main -> MAIN LEFT_PAR RIGHT_PAR LEFT_CURL . punto_goto_main main_aux RIGHT_CURL punto_generator
    (9) punto_goto_main -> .

    ID              reduce using rule 9 (punto_goto_main -> .)
    READ            reduce using rule 9 (punto_goto_main -> .)
    WRITE           reduce using rule 9 (punto_goto_main -> .)
    IF              reduce using rule 9 (punto_goto_main -> .)
    WHILE           reduce using rule 9 (punto_goto_main -> .)
    FOR             reduce using rule 9 (punto_goto_main -> .)
    RIGHT_CURL      reduce using rule 9 (punto_goto_main -> .)

    punto_goto_main                shift and go to state 37

state 33

    (13) variables -> VAR punto_variables_1 variables_aux SEMICOLON .

    MAIN            reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    VOID            reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    INT             reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    FLOAT           reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    CHAR            reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    RETURN          reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    ID              reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    READ            reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    WRITE           reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    IF              reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    WHILE           reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)
    FOR             reduce using rule 13 (variables -> VAR punto_variables_1 variables_aux SEMICOLON .)


state 34

    (15) variables_aux -> tipo COLON . declaracion_inicial
    (16) variables_aux -> tipo COLON . declaracion_inicial MORE variables_aux
    (20) declaracion_inicial -> . dec_varaux punto_dec_var_1 COMMA declaracion_inicial
    (21) declaracion_inicial -> . dec_varaux punto_dec_var_1
    (23) dec_varaux -> . ID
    (24) dec_varaux -> . dec_var_dimension
    (25) dec_var_dimension -> . ID LEFT_BR punto_is_array CTE_I punto_size RIGHT_BR
    (26) dec_var_dimension -> . ID LEFT_BR punto_is_array CTE_I punto_size RIGHT_BR LEFT_BR CTE_I punto_size RIGHT_BR

    ID              shift and go to state 40

    declaracion_inicial            shift and go to state 38
    dec_varaux                     shift and go to state 39
    dec_var_dimension              shift and go to state 41

state 35

    (38) funciones_aux -> tipo FUNC ID punto_id_func . punto_return_value LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables estatutos RIGHT_CURL punto_end_function_return
    (40) punto_return_value -> .

    LEFT_PAR        reduce using rule 40 (punto_return_value -> .)

    punto_return_value             shift and go to state 42

state 36

    (39) funciones_aux -> VOID FUNC ID punto_id_func . LEFT_PAR not_params RIGHT_PAR LEFT_CURL not_variables count_vars estatutos RIGHT_CURL end_func

    LEFT_PAR        shift and go to state 43


state 37

    (7) main -> MAIN LEFT_PAR RIGHT_PAR LEFT_CURL punto_goto_main . main_aux RIGHT_CURL punto_generator
    (10) main_aux -> . estatutos_main_multiple
    (11) main_aux -> . empty
    (98) estatutos_main_multiple -> . estatutos_main estatutos_main_multiple
    (99) estatutos_main_multiple -> . estatutos_main
    (160) empty -> .
    (92) estatutos_main -> . asignacion SEMICOLON
    (93) estatutos_main -> . llamada SEMICOLON
    (94) estatutos_main -> . lectura SEMICOLON
    (95) estatutos_main -> . escritura SEMICOLON
    (96) estatutos_main -> . decision SEMICOLON
    (97) estatutos_main -> . repeticion SEMICOLON
    (102) asignacion -> . vars EQUALS punto_igual m_exp punto_asignacion
    (114) llamada -> . ID punto_verify_id LEFT_PAR punto_era RIGHT_PAR punto_end_llamada
    (115) llamada -> . ID punto_verify_id LEFT_PAR punto_era dec_var_llamada RIGHT_PAR punto_verify_total_params punto_end_llamada
    (123) lectura -> . READ LEFT_PAR lectura_var RIGHT_PAR
    (128) escritura -> . WRITE LEFT_PAR escritura_aux RIGHT_PAR
    (136) decision -> . IF LEFT_PAR exp_or RIGHT_PAR punto_if_exp LEFT_CURL estatutos RIGHT_CURL punto_end_if
    (137) decision -> . IF LEFT_PAR exp_or RIGHT_PAR punto_if_exp LEFT_CURL estatutos RIGHT_CURL ELSE punto_else LEFT_CURL estatutos RIGHT_CURL punto_end_if
    (141) repeticion -> . condicional
    (142) repeticion -> . no_condicional
    (103) vars -> . ID punto_asignacion_var
    (104) vars -> . ID punto_asignacion_var punto_get_size LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_verify_arr
    (105) vars -> . ID punto_asignacion_var punto_get_size LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_dimension_2 LEFT_BR punto_fondo_falso m_exp punto_access_arr RIGHT_BR punto_verify_matriz
    (148) condicional -> . WHILE punto_while LEFT_PAR exp_or RIGHT_PAR punto_validar_exp LEFT_CURL estatutos RIGHT_CURL punto_end_while
    (143) no_condicional -> . FOR LEFT_PAR ID punto_for EQUALS m_exp punto_exp_for_inf TO m_exp punto_exp_for_sup RIGHT_PAR LEFT_CURL estatutos RIGHT_CURL punto_end_for

    RIGHT_CURL      reduce using rule 160 (empty -> .)
    ID              shift and go to state 55
    READ            shift and go to state 56
    WRITE           shift and go to state 57
    IF              shift and go to state 58
    WHILE           shift and go to state 61
    FOR             shift and go to state 62
